--- a/templates/password_reset_done.html
+++ b/templates/password_reset_done.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="reset-container">
-    <h2>Şifre Sıfırlama Bağlantısı Gönderildi</h2>
-    <p>E-posta adresinize şifre sıfırlama talimatlarını içeren bir bağlantı gönderdik.</p>
-    <p>Lütfen e-postanızı kontrol edin.</p>
+    <h2>Password Reset Link Sent</h2>
+    <p>We have sent a link with password reset instructions to your email address.</p>
+    <p>Please check your email.</p>
 </div>
 {% endblock %}
