--- a/templates/login.html
+++ b/templates/login.html
@@ -4,24 +4,24 @@
 <div class="login-container">
     <div class="login-branding">
         <img src="{% static 'img/iris_virginica.jpg' %}" alt="Logo" class="logo-img">
-        <p>Sisteme erişmek için kimlik bilgilerinizi giriniz.</p>
+        <p>Enter your credentials to access the system.</p>
     </div>
     <form method="post">
         {% csrf_token %}
         <div class="input-row">
-            <label>Kullanıcı Adı:</label>
+            <label>Username:</label>
             <input type="text" name="username">
         </div>
         <div class="input-row">
-            <label>Şifre:</label>
+            <label>Password:</label>
             <input type="password" name="password">
         </div>
-        <button type="submit">Giriş Yap</button>
+        <button type="submit">Login</button>
     </form>
 
     <div class="extra-links">
-        <a href="{% url 'register' %}">Hesap Oluştur</a> |
-        <a href="{% url 'password_reset' %}">Şifremi Unuttum</a>
+        <a href="{% url 'register' %}">Create Account</a> |
+        <a href="{% url 'password_reset' %}">Forgot Password</a>
     </div>
 </div>
 {% endblock %}
