--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="reset-container">
-    <h2>Şifre Sıfırlama</h2>
-    <p>E-posta adresinizi girin, size şifre sıfırlama bağlantısı gönderelim.</p>
+    <h2>Password Reset</h2>
+    <p>Enter your email address to receive a password reset link.</p>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Sıfırlama Bağlantısı Gönder</button>
+        <button type="submit">Send Reset Link</button>
     </form>
 </div>
 {% endblock %}
