--- a/templates/password_reset_complete.html
+++ b/templates/password_reset_complete.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="reset-container">
-    <h2>Şifre Sıfırlama Tamamlandı</h2>
-    <p>Şifreniz başarıyla değiştirildi. Şimdi yeni şifrenizle giriş yapabilirsiniz.</p>
-    <a href="{% url 'login' %}">Giriş Yap</a>
+    <h2>Password Reset Complete</h2>
+    <p>Your password has been successfully changed. You can now login with your new password.</p>
+    <a href="{% url 'login' %}">Login</a>
 </div>
 {% endblock %}
