edited some html files

--- a/templates/import_export.html
+++ b/templates/import_export.html
@@ -21,5 +21,10 @@
         <li>Ensure the file is comma-separated.</li>
         <li>Pay attention to column order.</li>
     </ol>
+    
+    <ul>
+        <li>File format must be <strong>.csv</strong>.</li>
+        <li>There should be no empty cells between data.</li>
+    </ul>
 </div>
 {% endblock %}
