--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,6 +68,22 @@ nav {
     text-align: center;
 }
 
+.nav-container ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.nav-container li {
+    margin: 0 5px;
+    display: flex;
+    align-items: center;
+}
+
 .nav-container a {
     color: var(--white);
     text-decoration: none;
@@ -227,6 +243,17 @@ input[type="submit"]:hover {
     color: white;
     margin-right: 5px;
     display: inline-block;
+    border: none;
+    cursor: pointer;
+}
+
+.logout-nav-btn {
+    background-color: #e74c3c;
+    margin-top: 0;
+}
+
+.logout-nav-btn:hover {
+    background-color: #c0392b;
 }
 
 .btn-edit {
