--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,17 +1,24 @@
 <div class="header">
     <h1>Iris Data Management Panel</h1>
     <nav>
-        <div class="nav-container"> <a href="{% url 'home' %}">Home</a> | <a
-                href="{% url 'search' %}">Search</a> | <a href="{% url 'import_csv' %}">Data Operations</a> |
-            <a href="https://archive.ics.uci.edu/ml/datasets/iris">UCI Source</a> | <a href="{% url 'predict' %}">Predict</a>
-            {% if user.is_authenticated %}
-            <span>Welcome, {{ user.username }}</span>
-            <form action="{% url 'logout' %}" method="post" style="display:inline;">
-                {% csrf_token %}<button type="submit">Logout</button>
-            </form>
-            {% else %}
-            <a href="{% url 'login' %}">Login</a>
-            {% endif %}
+        <div class="nav-container">
+            <ul>
+                <li><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="{% url 'search' %}">Search</a></li>
+                <li><a href="{% url 'import_csv' %}">Data Operations</a></li>
+                <li><a href="https://archive.ics.uci.edu/ml/datasets/iris">UCI Source</a></li>
+                <li><a href="{% url 'predict' %}">Predict</a></li>
+                {% if user.is_authenticated %}
+                <li><span>Welcome, {{ user.username }}</span></li>
+                <li>
+                    <form action="{% url 'logout' %}" method="post" style="display:inline;">
+                        {% csrf_token %}<button type="submit" class="btn-sm logout-nav-btn">Logout</button>
+                    </form>
+                </li>
+                {% else %}
+                <li><a href="{% url 'login' %}">Login</a></li>
+                {% endif %}
+            </ul>
         </div>
     </nav>
 </div>
